===== 2.0 =====
* Updated TOC to 4.1
* Moved the addon over to Ace3 for just about everything
* Added a options UI for configuration
* Added minimap button for quick access to some new options
-- Live-ish updating of party/raid scores if Autoscan is enabled
-- Reporting of party/raid AiL to Party, Raid, Guild and Say
* Fixed file encoding again, removed DOM from localization files
* Moved T11 down 1 iLevel to 278
* Added placeholder for T12 color, purple, 378-391
* Added zhCN translation thanks zhTW?!?
* Tool Tips now show in combat however inspecting/refreshing will not happen in combat
* Added automatic purging of old items when you log in, UI allows setting by Day
-- If you want to set it for a value less then a day "/run SIL:PurgeCache(hours);"
* Added and updated some slash commands, see the addon desciption
* Addon name should now be localized everywhere

===== To-Do =====
* Reporting of party/raid to tell
-- http://www.wowpedia.org/Creating_simple_pop-up_dialog_boxes
* UI for showing party/raid/cache
* no-lib option
* Use LDB to show current AiL of you/party/raid